# Github-Triager

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  blog.md  changes.md  client.py  improvements.md  inference.py  models.py  openenv.yaml  pyproject.toml
data/: project_structure.json  simulated_issues.json
server/: app.py  config.py  environment.py  graders.py  logging_config.py  session_store.py  ws_handler.py
tests/: test_environment.py  test_graders.py  test_websocket.py
training/: train_github_triager.ipynb  train_github_triager.py
