[project]
name = "github-triager-env"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "openenv-core>=0.2.0",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.0.0",
    "slowapi>=0.1.9"
]

[project.optional-dependencies]
inference = ["openai>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0"]
redis = ["redis[hiredis]>=5.0.0"]

[project.scripts]
server = "server.app:main"
